data/forge_javadoc/1.7.10/raw/net/minecraft/scoreboard/ServerScoreboard.md
---
title: "ServerScoreboard"
description: "public class ServerScoreboard extends Scoreboard"
package: "net/minecraft/scoreboard"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/scoreboard/ServerScoreboard.html"
sourceType: javadoc
---

# ServerScoreboard

**Inheritance:** java.lang.Object → net.minecraft.scoreboard.Scoreboard → net.minecraft.scoreboard.ServerScoreboard

## Class signature

```java
public class ServerScoreboard extends Scoreboard
```

## Constructors

- `ServerScoreboard(MinecraftServer p_i1501_1_)`

## Methods

- `void broadcastTeamCreated(ScorePlayerTeam p_96523_1_)`
- `void broadcastTeamRemoved(ScorePlayerTeam p_96538_1_)`
- `boolean func_151392_a(java.lang.String p_151392_1_, java.lang.String p_151392_2_)`
- `void func_96513_c(ScorePlayerTeam p_96513_1_)`
- `void func_96516_a(java.lang.String p_96516_1_)`
- `void func_96522_a(ScoreObjective p_96522_1_)`
- `void func_96530_a(int p_96530_1_, ScoreObjective p_96530_2_)`
- `void func_96532_b(ScoreObjective p_96532_1_)`
- `void func_96533_c(ScoreObjective p_96533_1_)`
- `void func_96536_a(Score p_96536_1_)`
- `void func_96546_g(ScoreObjective p_96546_1_)`
- `void func_96547_a(ScoreboardSaveData p_96547_1_)`
- `java.util.List func_96548_f(ScoreObjective p_96548_1_)`
- `void func_96549_e(ScoreObjective p_96549_1_)`
- `java.util.List func_96550_d(ScoreObjective p_96550_1_)`
- `protected void func_96551_b()`
- `int func_96552_h(ScoreObjective p_96552_1_)`
- `void removePlayerFromTeam(java.lang.String p_96512_1_, ScorePlayerTeam p_96512_2_)`
